# Minesweeper

./: .clang-tidy  CMakeLists.txt  README.md  Report.md
assets/: Minesweeper.url  Qt5 Documentation.url  assets.qrc  exe.rc  计算机编程强化训练任务书 (1).docx
assets/QSS/: MacOS.qss
src/: main.cpp  pch.h
src/core/: Options.cpp  Options.h  UserManager.cpp  UserManager.h
src/game/: BlockType.cpp  BlockType.h  Difficulty.cpp  Difficulty.h  Game.cpp  Game.h  GameStatus.h  Timer.cpp  Timer.h
src/widgets/: GameFinishDialog.cpp  GameFinishDialog.h  GameWindow.cpp  GameWindow.h  MainWindow.cpp  MainWindow.h  OptionDialog.cpp  OptionDialog.h  RegisterDialog.cpp  RegisterDialog.h  UserWindow.cpp  UserWindow.h
